feat: update manager user
